# light-cc

./: .coverage  .dockerignore  .env.example  .gitignore  Caddyfile  DEPLOY.md  Dockerfile  PHASE7.md  README.md  TOOLS_AND_SKILLS.md  alembic.ini  app.py  chainlit.md  config.yaml  docker-compose.observability.yml  docker-compose.prod.yml  docker-compose.yml  plot_sine.py  pyproject.toml  readme.md  requirements.txt  server.py  sine.json  worker.py
.chainlit/: config.toml
.claude/: settings.local.json
alembic/: env.py
commands/: __init__.py  analyze.md  chart.md  export.md  github.md  loader.py  recall.md  registry.py  remember.md  revert.md  run.md  search.md
core/: agent.py  agent_crud.py  agent_loader.py  agent_runner.py  agent_runs.py  agent_types.py  api_tokens.py  artifacts.py  auth.py  checkpoints.py  client.py  config.py  context.py  database.py  db_models.py  hooks.py  job_queue.py  log_context.py  mcp_client.py  memory_extractor.py  models.py  nl_cron.py  permission_modes.py  permissions.py  plugin_loader.py  plugin_manager.py  project_config.py  rate_limit.py  redis_store.py  router.py  rules.py  sandbox.py  sandbox_exec.py  schedule_crud.py  scheduler.py  search.py  session.py  storage.py  system_prompt.py  telemetry.py  (+4 more)
deploy/: prometheus.yml
docs/: AGENT_QUALITY_PLAN.md  OPERATIONS.md  README.md  RECREATION_PLAN.md  ROADMAP_STATUS.md  STRATEGIC_ROADMAP.md  USER_GUIDE.md  agents-vs-skills.md  playbooks-design.md  plugin-spec.md
frontend/: FONTS.md  index.html  package-lock.json  package.json  vite.config.js
handlers/: __init__.py  commands.py  (+6 more)
(+172 files in other folders)
